src/corelib/itemmodels/qconcatenatetablesproxymodel.cpp
@@ -30,10 +30,18 @@ public:
     void slotRowsInserted(const QModelIndex &, int start, int end);
     void slotRowsAboutToBeRemoved(const QModelIndex &, int start, int end);
     void slotRowsRemoved(const QModelIndex &, int start, int end);
+    void slotRowsAboutToBeMoved(const QModelIndex &sourceParent, int sourceStart, int sourceEnd,
+                                const QModelIndex &destinationParent, int destinationRow);
+    void slotRowsMoved(const QModelIndex &sourceParent, int sourceStart, int sourceEnd,
+                       const QModelIndex &destinationParent, int destinationRow);
     void slotColumnsAboutToBeInserted(const QModelIndex &parent, int start, int end);
     void slotColumnsInserted(const QModelIndex &parent, int, int);
     void slotColumnsAboutToBeRemoved(const QModelIndex &parent, int start, int end);
     void slotColumnsRemoved(const QModelIndex &parent, int, int);
+    void slotColumnsAboutToBeMoved(const QModelIndex &sourceParent, int sourceStart, int sourceEnd,
+                                   const QModelIndex &destinationParent, int destination);
+    void slotColumnsMoved(const QModelIndex &sourceParent, int sourceStart, int sourceEnd,
+                          const QModelIndex &destinationParent, int destination);
     void slotDataChanged(const QModelIndex &from, const QModelIndex &to, const QList<int> &roles);
     void slotSourceLayoutAboutToBeChanged(const QList<QPersistentModelIndex> &sourceParents, QAbstractItemModel::LayoutChangeHint hint);
     void slotSourceLayoutChanged(const QList<QPersistentModelIndex> &sourceParents, QAbstractItemModel::LayoutChangeHint hint);
@@ -46,7 +54,7 @@ public:
                                     int *sourceRow, int *sourceColumn, QModelIndex *sourceParent, QAbstractItemModel **sourceModel) const;
 
     struct ModelInfo {
-        using ConnArray = std::array<QMetaObject::Connection, 13>;
+        using ConnArray = std::array<QMetaObject::Connection, 17>;
         ModelInfo(QAbstractItemModel *m, ConnArray &&con)
             : model(m), connections(std::move(con)) {}
         QAbstractItemModel *model = nullptr;
@@ -472,6 +480,10 @@ void QConcatenateTablesProxyModel::addSourceModel(QAbstractItemModel *sourceMode
                                 d, &QConcatenateTablesProxyModelPrivate::slotRowsAboutToBeInserted),
         QObjectPrivate::connect(sourceModel, &QAbstractItemModel::rowsAboutToBeRemoved,
                                 d, &QConcatenateTablesProxyModelPrivate::slotRowsAboutToBeRemoved),
+        QObjectPrivate::connect(sourceModel, &QAbstractItemModel::rowsMoved,
+                                d, &QConcatenateTablesProxyModelPrivate::slotRowsMoved),
+        QObjectPrivate::connect(sourceModel, &QAbstractItemModel::rowsAboutToBeMoved,
+                                d, &QConcatenateTablesProxyModelPrivate::slotRowsAboutToBeMoved),
 
         QObjectPrivate::connect(sourceModel, &QAbstractItemModel::columnsInserted,
                                 d, &QConcatenateTablesProxyModelPrivate::slotColumnsInserted),
@@ -481,6 +493,10 @@ void QConcatenateTablesProxyModel::addSourceModel(QAbstractItemModel *sourceMode
                                 d, &QConcatenateTablesProxyModelPrivate::slotColumnsAboutToBeInserted),
         QObjectPrivate::connect(sourceModel, &QAbstractItemModel::columnsAboutToBeRemoved,
                                 d, &QConcatenateTablesProxyModelPrivate::slotColumnsAboutToBeRemoved),
+        QObjectPrivate::connect(sourceModel, &QAbstractItemModel::columnsMoved,
+                                d, &QConcatenateTablesProxyModelPrivate::slotColumnsMoved),
+        QObjectPrivate::connect(sourceModel, &QAbstractItemModel::columnsAboutToBeMoved,
+                                d, &QConcatenateTablesProxyModelPrivate::slotColumnsAboutToBeMoved),
 
         QObjectPrivate::connect(sourceModel, &QAbstractItemModel::layoutAboutToBeChanged,
                                 d, &QConcatenateTablesProxyModelPrivate::slotSourceLayoutAboutToBeChanged),
@@ -565,6 +581,33 @@ void QConcatenateTablesProxyModelPrivate::slotRowsRemoved(const QModelIndex &par
     q->endRemoveRows();
 }
 
+void QConcatenateTablesProxyModelPrivate::slotRowsAboutToBeMoved(
+        const QModelIndex &sourceParent, int sourceStart, int sourceEnd,
+        const QModelIndex &destinationParent, int destinationRow)
+{
+    Q_Q(QConcatenateTablesProxyModel);
+    if (sourceParent.isValid() || destinationParent.isValid())
+        return;
+    const QAbstractItemModel *const model = static_cast<QAbstractItemModel *>(q->sender());
+    const int rowsPrior = computeRowsPrior(model);
+    q->beginMoveRows(sourceParent, rowsPrior + sourceStart, rowsPrior + sourceEnd,
+                     destinationParent, rowsPrior + destinationRow);
+}
+
+void QConcatenateTablesProxyModelPrivate::slotRowsMoved(const QModelIndex &sourceParent,
+                                                        int sourceStart, int sourceEnd,
+                                                        const QModelIndex &destinationParent,
+                                                        int destinationRow)
+{
+    Q_Q(QConcatenateTablesProxyModel);
+    Q_UNUSED(sourceStart)
+    Q_UNUSED(sourceEnd)
+    Q_UNUSED(destinationRow)
+    if (sourceParent.isValid() || destinationParent.isValid())
+        return;
+    q->endMoveRows();
+}
+
 void QConcatenateTablesProxyModelPrivate::slotColumnsAboutToBeInserted(const QModelIndex &parent,
                                                                        int start, int end)
 {
@@ -623,6 +666,31 @@ void QConcatenateTablesProxyModelPrivate::slotColumnsRemoved(const QModelIndex &
         m_columnCount = m_newColumnCount;
         q->endRemoveColumns();
     }
+}
+
+void QConcatenateTablesProxyModelPrivate::slotColumnsAboutToBeMoved(
+        const QModelIndex &sourceParent, int sourceStart, int sourceEnd,
+        const QModelIndex &destinationParent, int destination)
+{
+    Q_UNUSED(sourceStart)
+    Q_UNUSED(sourceEnd)
+    Q_UNUSED(destination)
+    if (sourceParent.isValid() || destinationParent.isValid())
+        return;
+    slotSourceLayoutAboutToBeChanged({}, QAbstractItemModel::HorizontalSortHint);
+}
+
+void QConcatenateTablesProxyModelPrivate::slotColumnsMoved(const QModelIndex &sourceParent,
+                                                           int sourceStart, int sourceEnd,
+                                                           const QModelIndex &destinationParent,
+                                                           int destination)
+{
+    Q_UNUSED(sourceStart)
+    Q_UNUSED(sourceEnd)
+    Q_UNUSED(destination)
+    if (sourceParent.isValid() || destinationParent.isValid())
+        return;
+    slotSourceLayoutChanged({}, QAbstractItemModel::HorizontalSortHint);
 }
 
 void QConcatenateTablesProxyModelPrivate::slotDataChanged(const QModelIndex &from,
